--- a/style.css
+++ b/style.css
@@ -7,3 +7,15 @@ h1{
 #name{
     color: rgba(248, 130, 83, 0.952);
 }
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 3%;
+    margin-right: 3%;
+    padding-left: 2%;
+
+}
+.half-width img {
+    width: 100%;
+    height: 100%;
+}
