--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 0px;
 }
 h1{
     font-size: 40px;
@@ -18,4 +19,59 @@ h1{
 .half-width img {
     width: 100%;
     height: 100%;
+
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    height: 600px;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, salmon,orangered);
+    padding: 10px 20px;
+    color: whitesmoke;
+    border-radius: 10px;
+    font-weight: 100px;
+}
+p{
+    color: rgb(59, 59, 59);
+}
+h3{
+    color: tomato;
+}
+pre{
+    font-size: 40px;
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 600px;
+}
+.single-exp{
+    box-shadow:10px 10px 40px gray;
+    height: 50%;
+    background-color: white;
+}
+.exp-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#half-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(2, 120, 255),rgb(195, 222, 253));
+    border-image-slice: 1;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(rgb(255, 67, 67),rgb(248, 181, 103));
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
