--- a/style.css
+++ b/style.css
@@ -1,77 +1,75 @@
-body{
-    font-family: 'Roboto', sans-serif;
-    margin: 0px;
+body {
+	font-family: "Roboto", sans-serif;
+	margin: 0px;
 }
-h1{
-    font-size: 40px;
+h1 {
+	font-size: 40px;
 }
-#name{
-    color: rgba(248, 130, 83, 0.952);
+#name {
+	color: rgba(248, 130, 83, 0.952);
 }
-.half-width{
-    width: 40%;
-    float: left;
-    margin-left: 3%;
-    margin-right: 3%;
-    padding-left: 2%;
-
+.half-width {
+	width: 40%;
+	float: left;
+	margin-left: 3%;
+	margin-right: 3%;
+	padding-left: 2%;
 }
 .half-width img {
-    width: 100%;
-    height: 100%;
-
+	width: 100%;
+	height: 100%;
 }
-.top-banner{
-    background-image: url(images/top-banner.png);
-    background-repeat: no-repeat;
-    height: 600px;
+.top-banner {
+	background-image: url(images/top-banner.png);
+	background-repeat: no-repeat;
+	height: 600px;
 }
-section{
-    height: 500px;
+section {
+	height: 500px;
 }
-.link-button{
-    text-decoration: none;
-    background-image: linear-gradient(45deg, salmon,orangered);
-    padding: 10px 20px;
-    color: whitesmoke;
-    border-radius: 10px;
-    font-weight: 100px;
+.link-button {
+	text-decoration: none;
+	background-image: linear-gradient(45deg, salmon, orangered);
+	padding: 10px 20px;
+	color: whitesmoke;
+	border-radius: 10px;
+	font-weight: 100px;
 }
-p{
-    color: rgb(59, 59, 59);
+p {
+	color: rgb(59, 59, 59);
 }
-h3{
-    color: tomato;
+h3 {
+	color: tomato;
 }
-pre{
-    font-size: 40px;
+pre {
+	font-size: 40px;
 }
-.dream-area{
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
-    height: 600px;
+.dream-area {
+	background-image: url(images/dream-bg.png);
+	background-repeat: no-repeat;
+	background-position: right;
+	height: 600px;
 }
-.single-exp{
-    box-shadow:10px 10px 40px gray;
-    height: 50%;
-    background-color: white;
+.single-exp {
+	box-shadow: 10px 10px 40px gray;
+	height: 50%;
+	background-color: white;
 }
-.exp-area{
-    background-image: url(images/exp-bg.png);
-    background-repeat: no-repeat;
-    background-position: left;
+.exp-area {
+	background-image: url(images/exp-bg.png);
+	background-repeat: no-repeat;
+	background-position: left;
 }
-#half-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(rgb(2, 120, 255),rgb(195, 222, 253));
-    border-image-slice: 1;
+#half-stack {
+	border-left: 7px solid;
+	border-image: linear-gradient(rgb(2, 120, 255), rgb(195, 222, 253));
+	border-image-slice: 1;
 }
-#full-stack{
-    border-left: 7px solid;
-    border-image: linear-gradient(rgb(255, 67, 67),rgb(248, 181, 103));
-    border-image-slice: 1;
+#full-stack {
+	border-left: 7px solid;
+	border-image: linear-gradient(rgb(255, 67, 67), rgb(248, 181, 103));
+	border-image-slice: 1;
 }
-footer{
-    text-align: center;
+footer {
+	text-align: center;
 }
