--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h1 {
 	font-size: 40px;
 }
 #name {
-	color: rgba(248, 130, 83, 0.952);
+	color: rgba(2, 215, 247, 0.952);
 }
 .half-width {
 	width: 40%;
@@ -20,16 +20,16 @@ h1 {
 	height: 100%;
 }
 .top-banner {
-	background-image: url(images/top-banner.png);
+	background-image: url(images/top-banner2.png);
 	background-repeat: no-repeat;
 	height: 600px;
 }
 section {
-	height: 500px;
+	height: 600px;
 }
 .link-button {
 	text-decoration: none;
-	background-image: linear-gradient(45deg, salmon, orangered);
+	background-image: linear-gradient(45deg, rgb(0, 60, 190), rgb(25, 180, 251));
 	padding: 10px 20px;
 	color: whitesmoke;
 	border-radius: 10px;
@@ -39,7 +39,7 @@ p {
 	color: rgb(59, 59, 59);
 }
 h3 {
-	color: tomato;
+	color: rgb(0, 149, 248);
 }
 pre {
 	font-size: 40px;
@@ -67,7 +67,7 @@ pre {
 }
 #full-stack {
 	border-left: 7px solid;
-	border-image: linear-gradient(rgb(255, 67, 67), rgb(248, 181, 103));
+	border-image: linear-gradient(rgb(26, 247, 255), rgb(0, 113, 241));
 	border-image-slice: 1;
 }
 footer {
